--- a/templates/base.html
+++ b/templates/base.html
@@ -321,6 +321,9 @@
             document.querySelector('.phone-input').style.display = 'block';
         }
 
+
+    </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
